added Search component

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/index.css" />
+    <link rel="stylesheet" href="src/styles/index.css" />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=khand@400&f[]=array@400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=nippo@1&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React</title>
   </head>
   <body>
